--- a/css/style.css
+++ b/css/style.css
@@ -41,16 +41,84 @@ a.skip-to-content:focus {
     grid-gap: 20px;
 }
 
-/* Style the individual grid items (content sections) */
 .grid-layout > div {
+    height: auto;
+    width: auto;
+    max-width: 100px;
+    border: 2px solid #000;
     padding: 20px;
-    border: 1px solid #ccc;
     background-color: #f9f9f9;
+    background: linear-gradient(135deg, #3498db, #ffffff);
     border-radius: 5px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    justify-content: center;
+    align-items: center;
+    grid-gap: 20px;
+    margin-left: 20px;
+    margin-top: 10px;
+    margin-right: 20px;
+    margin-bottom: 20px;
+    word-wrap: break-word;
+    grid-auto-flow: column;
 }
 
+.grid-layout img,
+.grid-layout video {
+    width: 100%;
+    max-height: 50%;
+    height: auto;
+    border: 2px solid #8c00ff;
+    border-radius: 5px;
+}
+
+.grid-layout h1 {
+    font-size: 24px;
+    margin-bottom: 10px;
+}
+
+.grid-layout p {
+    font-size: 16px;
+    line-height: 1.5;
+}
+
+.grid-layout h3 {
+    font-size: 20px;
+    margin-top: 15px;
+}
+
+.grid-layout ul {
+    list-style-type: disc;
+    margin-left: 20px;
+}
+
+.grid-layout li {
+    font-size: 16px;
+    line-height: 1.5;
+}
+
+body {
+    background: linear-gradient(135deg, #777, #444);
+}
 
 h1 {
     display: none;
+}
+
+main {
+    background: linear-gradient(135deg, #777, #444);
+}
+
+.grid-layout > div:first-child {
+    grid-column: span 2;
+    max-width: 300px;
+}
+
+.grid-layout > div:first-child img {
+    width: 100px;
+}
+
+@media (prefers-reduced-motion: reduce) {
+    .gif {
+      display: none;
+    }
 }
